2006-03-09  David Reveman  <davidr@novell.com>

	* configure.ac: Back out last change, Xorg and Xgl servers cannot yet
	be built at the same time.

	* GL/mesa/Makefile.am (SUBDIRS): Remove glapi from SUBDIRS, it
	shouldn't be there, glapi sources are now in $(top_srcdir)/GL/glx.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* GL/glx/Makefile.am: find xf86dristr.h again.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* GL/mesa/Makefile.am: added missing glapi to SUBDIRS.
	* cfb/Makefile.am, cfb16/Makefile.am, cfb24/Makefile.am, cfb32/Makefile.am:
	  Added missing -I$(top_srcdir)/hw/xfree86/common.

2006-03-09  Matthias Hopf  <mhopf@suse.de>

	* configure.ac: Do Xorg configure checks for Xgl only as well
	  Remove creation of exa/Makefile (broken ATM).

2006-03-09  David Reveman  <davidr@novell.com>

	* hw/xgl/xglscreen.c (xglScreenInit): Use xglScreenInfo.widthMm
	and xglScreenInfo.heightMm if set.

	* Makefile.am:
	* configure.ac:
	* include/dix-config.h.in:
	* hw/xfree86/dixmods/Makefile.am: Update configure.ac.

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Reference
	__glXDRItextureFromPixmapScreen.

	* GL/glx/Makefile.am: Always build libglxdri.

	* hw/xgl/glxext/xglglxext.c:
	* GL/glx/glxserver.h:
	* GL/glx/glxcmds.c: Move EXT_tfp enums to glxserver.h.

2006-03-08  David Reveman  <davidr@novell.com>

	* GL/symlink-mesa.sh:
	* GL/glx/Makefile.am:
	* GL/glx/g_disptab.h:
	* GL/glx/global.c:
	* GL/glx/glxcmds.c:
	* GL/glx/glxcmdsswap.c:
	* GL/glx/glxcontext.h:
	* GL/glx/glxdrawable.h:
	* GL/glx/glxext.c:
	* GL/glx/glximports.c:
	* GL/glx/glxscreens.c:
	* GL/glx/glxscreens.h:
	* GL/glx/glxserver.h:
	* GL/glx/glxutil.c:
	* GL/glx/glxutil.h:
	* GL/glx/indirect_util.c:
	* GL/glx/render2swap.c:
	* GL/glx/single2.c:
	* GL/include/GL/glx_ansic.h:
	* GL/include/GL/xf86glx.h:
	* GL/mesa/Makefile.am:
	* GL/mesa/X/Makefile.am:
	* GL/mesa/X/xf86glx.c:
	* GL/mesa/X/xf86glx_util.c:
	* GL/mesa/X/xf86glxint.h:
	* GL/mesa/array_cache/Makefile.am:
	* GL/mesa/glapi/Makefile.am: